--- a/assets/login.css
+++ b/assets/login.css
@@ -10,8 +10,9 @@
     
 
     --primary-color-blue: #0C1416;
-    --secondary-color-green: #1b282c;
-    --third-color-purple: #6F42C1;
+    --secondary-color-green: #0C1416;
+    /* --secondary-color-green: #1b282c;
+    --third-color-purple: #6F42C1; */
     --four-color-yellow: #141F23;
 }
 
