--- a/assets/style.css
+++ b/assets/style.css
@@ -2,19 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 :root {
-    --primary-color-default: #D84B2C;
-    --secondary-color-default: #E65F41;
-    --third-color-default: #F2F2F2;
-    --four-color-default: #D55337;
-    --fifth-color-default: #3e3d3e;
-    
+    --primary-color-default: #0C1416;
+    --secondary-color-default: #1b282c;
+    --third-color-default: #6F42C1;
+    --four-color-default: #6F42C1;
+    --fifth-color-default: #141F23;
 
-    --primary-color-blue: #0C1416;
-    --secondary-color-green: #1b282c;
-    --third-color-purple: #6F42C1;
-    --four-color-yellow: #141F23;
-    --fifth-color-orange: #3e3d3e;
+    --primary-color-blue: #D84B2C;
+    --secondary-color-green: #E65F41;
+    --third-color-purple: #dda092;
+    --four-color-yellow: #E65F41;
+    --fifth-color-orange: #E65F41;
 }
+
 
 
 body::-webkit-scrollbar {
@@ -25,6 +25,7 @@ body {
     background-color: var(--primary-color, var(--primary-color-default));
     line-height: 1.6;
     scrollbar-width: none;
+    color: white;
     margin: 0;
     padding: 0;
     font-family: 'Nunito Sans', sans-serif;
@@ -36,7 +37,7 @@ body {
 aside {
     margin-top: 2%;
     border-radius: 10px;
-    background-color: #3d226f;
+    background-color: var(--third-color, var(--third-color-default));
     width: 23%;
     height: 90%;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
@@ -67,9 +68,10 @@ header .head {
 }
 
 header .search {
+    color: white;
     border: none;    
     background-color: transparent;
-    margin-left: -80px;
+    margin-left: -10px;
     text-align: center;
     font-size: 1em;
     font-weight: 900;
@@ -79,7 +81,7 @@ header .search {
 
 .search:focus {
     outline: none;
-    caret-color: transparent;
+    
 }
 
 ::placeholder {
@@ -187,6 +189,16 @@ ul li ul li a {
     overflow-x: hidden;
 }
 
+
+.div-a-affciher {
+    position: relative;
+    z-index: 999;
+    transform: scale(0.3);
+    margin-top: -59%;
+    margin-left: 65%;
+    rotate: -10deg;
+}
+
 .sub-category {
     display: block;
 }
@@ -199,6 +211,11 @@ ul li ul li a {
 .sub-category a {
     text-decoration: none;
     color: gray;
+}
+
+.message {
+    background-color: transparent;
+    transition: background-color 0.5s ease-in-out;
 }
 
 .message {
@@ -266,4 +283,8 @@ span {
     height: 25px;
 }
 
-
+.degg {
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 20%;
+}
