--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -9,13 +9,13 @@
 <body>
 
     <header>
-        <div class="head">FORHUM.</div>
+        <a href="homepage" class="head">FORHUM.</a>
         <input class="search" type="search" placeholder="rechercher">
         <a class="creation" href="/createpost"> CRÉER. </a>
     </header>
 
     <div class="all">
-        <h1><span>Créer</span> une Publication</h1>
+        <h1><span>CREER</span>Publication</h1>
         <div class="backs">
 
 
