--- a/assets/creation.css
+++ b/assets/creation.css
@@ -41,19 +41,26 @@ body {
     margin-left: 780px;
 }
 
+a {
+    text-decoration: none;
+    text-underline-offset: 0;
+}
+
 form {
     
     height: 500px;
 }
 
-span {
+/* a Réfléchir */
+
+/* span {
+    font-weight: 900;
     font-size: 1.5em;
-    
-     
-    opacity: 0.7;
-    color: #6F42C1;
-    margin-bottom: -40px;
-}
+    transform: scale(1, 3);
+    letter-spacing: -3px;
+    color: white;
+    margin-bottom: 40px;
+} */
 
 h1 {
     display: flex;
