--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -14,6 +14,7 @@
         <a class="creation" href="/createpost"> CRÉER. </a>
     </header>
 
+    <img src="/assets/images/rhum.png" alt="rhum" class="ruuu">
     <div class="all">
         <h1><span>CREER</span>Publication</h1>
         <div class="backs">
