--- a/assets/creation.css
+++ b/assets/creation.css
@@ -53,14 +53,13 @@ form {
 
 /* a Réfléchir */
 
-/* span {
+span {
     font-weight: 900;
     font-size: 1.5em;
-    transform: scale(1, 3);
-    letter-spacing: -3px;
+    transform: scale(1.1, 2);
     color: white;
-    margin-bottom: 40px;
-} */
+    margin-bottom: 5px;
+}
 
 h1 {
     display: flex;
@@ -70,8 +69,9 @@ h1 {
     font-weight: 800;
     font-size: 4em;
     border-radius: 10px;
-    height: 200px;
-    width: 480px;
+    
+    height: 250px;
+    width: 500px;
     padding: 20px;
     margin-top: 20%;
     margin-right: -60%;
@@ -81,6 +81,14 @@ h1 {
 .search:focus {
     outline: none;
     caret-color: transparent;
+}
+
+.ruuu {
+    position: absolute;
+    
+    margin-top: 7%;
+    margin-left: 30%;
+    rotate: 3deg;
 }
 
 .all {
