--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,7 @@ h1 {
 
 .infos {
     margin-top: 91px;
+    
 }
 
 .nombreape {
@@ -76,7 +77,7 @@ h1 {
     padding: 6px;
     margin-left: 190px;
     font-weight: 800;
-    margin-bottom: -40px;
+    margin-bottom: -30px;
     font-size: 1.1em;
     width: 40px;
 }
@@ -295,9 +296,10 @@ ul li ul li a {
 
 .devvv {
     padding: 6px;
-    width: 140px;
+    width: 130px;
     margin-left: 190px;
     margin-top: 52px;
+    font-size: 0.9em;
 }
 
 span {
