--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -33,7 +33,7 @@
         
         <!-- Champ de recherche et lien pour créer un post -->
         <input class="search" type="search" placeholder="rechercher">
-        <a class="createe" href="/createpost"> CREER </a>
+        <a class="createe" href="/createpost"> CRÉER. </a>
     </header>
     
     <!-- Section principale du site -->
